Created a Multiplication fucntion

--- a/Python Practice.ipynb
+++ b/Python Practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "8af22597",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "519caaca",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "27e3c654",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "id": "d8818eaa",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "id": "7027af1e",
    "metadata": {},
    "outputs": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "id": "ba411d98",
    "metadata": {},
    "outputs": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "id": "d9e668f1",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "id": "ddcd47a3",
    "metadata": {},
    "outputs": [
@@ -289,7 +289,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "id": "29d2aeb5",
    "metadata": {},
    "outputs": [],
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 24,
    "id": "f1428df6",
    "metadata": {},
    "outputs": [
@@ -338,8 +338,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "2ed2645c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result is : 15.9826\n",
+      "Function is working amazingly.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculator multiplication function with 2 inputs and then printing the final results.\n",
+    "\n",
+    "def times1(firstNo, secondNo):\n",
+    "    firstNo = firstNo\n",
+    "    seconNo = secondNo\n",
+    "    result = firstNo*secondNo\n",
+    "    return result\n",
+    "\n",
+    "result1 = times1(3.14, 5.09)\n",
+    "print(\"Result is : \" + str(result1))\n",
+    "test = 15.9826\n",
+    "\n",
+    "if(test == result1):\n",
+    "    print(\"Function is working amazingly.\")\n",
+    "else:\n",
+    "    print(\"Function not working.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffebcee0",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f350a30",
    "metadata": {},
    "outputs": [],
    "source": []
