--- a/03 Gradient Descent.ipynb
+++ b/03 Gradient Descent.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 301,
    "id": "b0079fd1",
    "metadata": {},
    "outputs": [],
@@ -19,6 +19,8 @@
     "import numpy as np\n",
     "from mpl_toolkits.mplot3d.axes3d import Axes3D\n",
     "from matplotlib import cm\n",
+    "from sympy import symbols, diff\n",
+    "from math import log\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -35,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 255,
    "id": "c0fc48a6",
    "metadata": {},
    "outputs": [],
@@ -46,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 256,
    "id": "bf4de07d",
    "metadata": {},
    "outputs": [],
@@ -58,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 257,
    "id": "c3f45faf",
    "metadata": {
     "scrolled": true
@@ -111,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 258,
    "id": "f32ba4f5",
    "metadata": {},
    "outputs": [],
@@ -122,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 259,
    "id": "62fcb7f8",
    "metadata": {
     "scrolled": true
@@ -179,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 260,
    "id": "df20e84d",
    "metadata": {},
    "outputs": [
@@ -204,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 261,
    "id": "6a440193",
    "metadata": {},
    "outputs": [
@@ -233,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 262,
    "id": "3015de11",
    "metadata": {},
    "outputs": [
@@ -282,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 263,
    "id": "3ceff69f",
    "metadata": {
     "scrolled": true
@@ -346,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 264,
    "id": "74468ddf",
    "metadata": {},
    "outputs": [
@@ -652,7 +654,7 @@
        " '']"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 264,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 265,
    "id": "bae837ec",
    "metadata": {},
    "outputs": [],
@@ -709,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 266,
    "id": "44974611",
    "metadata": {},
    "outputs": [
@@ -771,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 267,
    "id": "85280456",
    "metadata": {},
    "outputs": [],
@@ -802,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 268,
    "id": "efa7ef2f",
    "metadata": {},
    "outputs": [
@@ -823,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 269,
    "id": "c8a13f52",
    "metadata": {},
    "outputs": [
@@ -844,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 270,
    "id": "7934716d",
    "metadata": {},
    "outputs": [
@@ -865,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 271,
    "id": "c582f1da",
    "metadata": {
     "scrolled": true
@@ -930,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 272,
    "id": "2edc3556",
    "metadata": {},
    "outputs": [],
@@ -947,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 273,
    "id": "fa564fa5",
    "metadata": {
     "scrolled": false
@@ -1015,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 274,
    "id": "4d82a70b",
    "metadata": {},
    "outputs": [
@@ -1025,7 +1027,7 @@
        "1.7976931348623157e+308"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 274,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1039,7 +1041,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "108f876b",
+   "id": "3ab06780",
    "metadata": {},
    "source": [
     "## Python Tuples\n",
@@ -1052,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 275,
    "id": "969c56f9",
    "metadata": {},
    "outputs": [
@@ -1096,7 +1098,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4829712",
+   "id": "a9fc9593",
    "metadata": {},
    "source": [
     "\n",
@@ -1105,8 +1107,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
-   "id": "a0278135",
+   "execution_count": 276,
+   "id": "c56ffa31",
    "metadata": {
     "scrolled": true
    },
@@ -1170,8 +1172,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
-   "id": "cd1cf81c",
+   "execution_count": 277,
+   "id": "392f1629",
    "metadata": {},
    "outputs": [
     {
@@ -1236,7 +1238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7aec752d",
+   "id": "927da2c9",
    "metadata": {},
    "source": [
     "## Example 4 - Data Viz with 3d charts\n",
@@ -1248,8 +1250,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
-   "id": "625fd2c4",
+   "execution_count": 278,
+   "id": "861c46eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1260,8 +1262,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
-   "id": "16cc725f",
+   "execution_count": 279,
+   "id": "7e676bf6",
    "metadata": {},
    "outputs": [
     {
@@ -1286,8 +1288,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
-   "id": "89dd8049",
+   "execution_count": 280,
+   "id": "0c509669",
    "metadata": {},
    "outputs": [
     {
@@ -1326,9 +1328,239 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1657b38f",
+   "metadata": {},
+   "source": [
+    "## Partial Derivatives & Symbolic Computation\n",
+    "\n",
+    "### $$ \\frac {\\partial f}{\\partial x} = \\frac {2x \\ln(3) \\cdot 3^{-x^2 - y^2}}{ \\left( 3^{-x^2 - y^2} +1 \\right) ^2}\\ $$ \n",
+    "\n",
+    "### $$ \\frac {\\partial f}{\\partial y} = \\frac {2y \\ln(3) \\cdot 3^{-x^2 - y^2}}{ \\left( 3^{-x^2 - y^2} +1 \\right) ^2}\\ $$ "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 296,
+   "id": "c5931d2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Our cost function f(x,y) is:  1/(3**(-x**2 - y**2) + 1)\n",
+      "Partial drivative wrt x is:  2*3**(-x**2 - y**2)*x*log(3)/(3**(-x**2 - y**2) + 1)**2\n",
+      "Value of f(x,y) at x=1.8, y=1.0 os: 0.990604794032582\n",
+      "Value of partial derivative wrx is:  0.0368089716197505\n"
+     ]
+    }
+   ],
+   "source": [
+    "a, b = symbols('x, y')\n",
+    "print('Our cost function f(x,y) is: ', f(a, b))\n",
+    "print('Partial drivative wrt x is: ', diff(f(a,b),a))\n",
+    "print('Value of f(x,y) at x=1.8, y=1.0 os:',\n",
+    "f(a,b).evalf(subs={a:1.8, b:1.0})) #Python dictionary\n",
+    "\n",
+    "print('Value of partial derivative wrx is: ' ,diff(f(a,b), a).evalf(subs={a:1.8, b:1.0}))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9fefc892",
+   "metadata": {},
+   "source": [
+    "## Batch Gradient Descent with SymPy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 295,
+   "id": "9e6c11ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Values in gradient array [2.01013037525579e-11 1.11673909736433e-11]\n",
+      "Minimum occurs at x value of:  3.45838599885832e-11\n",
+      "Minimum occurs at y value of:  1.92132555492129e-11\n",
+      "The cost is:  0.500000000000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Setup\n",
+    "multiplier = 0.1\n",
+    "max_iter = 500\n",
+    "\n",
+    "params = np.array([1.8, 1.0]) # Initial guess\n",
+    "#params = [1.8, 1.0] # Initial guess\n",
+    "\n",
+    "for n in range(max_iter):\n",
+    "    gradient_x = diff(f(a,b), a).evalf(subs={a:params[0],b:params[1]})\n",
+    "    gradient_y = diff(f(a,b), b).evalf(subs={a:params[0],b:params[1]})\n",
+    "    gradients = np.array([gradient_x, gradient_y]) \n",
+    "    \n",
+    "    params = params - multiplier * gradients\n",
+    "    \n",
+    "#Results\n",
+    "\n",
+    "print('Values in gradient array', gradients)\n",
+    "print('Minimum occurs at x value of: ', params[0])\n",
+    "print('Minimum occurs at y value of: ', params[1])\n",
+    "print('The cost is: ', f(params[0], params[1]))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 300,
+   "id": "c2628b0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fpx(x, y):\n",
+    "    r = 3**(-x**2 -y**2)\n",
+    "    return 2*x*log(3)*r / (r + 1)**2\n",
+    "\n",
+    "def fpy(x, y):\n",
+    "    r = 3**(-x**2 -y**2)\n",
+    "    return 2*y*log(3)*r / (r + 1)**2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 305,
+   "id": "a98a00f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Values in gradient array [2.01013038e-11 1.11673910e-11]\n",
+      "Minimum occurs at x value of:  3.458385998858304e-11\n",
+      "Minimum occurs at y value of:  1.9213255549212797e-11\n",
+      "The cost is:  0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Setup\n",
+    "multiplier = 0.1\n",
+    "max_iter = 500\n",
+    "\n",
+    "params = np.array([1.8, 1.0]) # Initial guess\n",
+    "#params = [1.8, 1.0] # Initial guess\n",
+    "\n",
+    "for n in range(max_iter):\n",
+    "    gradient_x = fpx(params[0], params[1])\n",
+    "    gradient_y = fpy(params[0], params[1])\n",
+    "    gradients = np.array([gradient_x, gradient_y]) \n",
+    "    \n",
+    "    params = params - multiplier * gradients\n",
+    "    \n",
+    "#Results\n",
+    "\n",
+    "print('Values in gradient array', gradients)\n",
+    "print('Minimum occurs at x value of: ', params[0])\n",
+    "print('Minimum occurs at y value of: ', params[1])\n",
+    "print('The cost is: ', f(params[0], params[1]))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a1500c8",
+   "metadata": {},
+   "source": [
+    "## Graphing 3D Gradient Descent & Adv Numpy Arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 308,
+   "id": "7dd99b2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2)\n",
+      "Values in gradient array [2.01013038e-11 1.11673910e-11]\n",
+      "Minimum occurs at x value of:  3.458385998858304e-11\n",
+      "Minimum occurs at y value of:  1.9213255549212797e-11\n",
+      "The cost is:  0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Setup\n",
+    "multiplier = 0.1\n",
+    "max_iter = 500\n",
+    "\n",
+    "params = np.array([1.8, 1.0]) # Initial guess\n",
+    "#params = [1.8, 1.0] # Initial guess\n",
+    "\n",
+    "values_array = params.reshape(1,2)\n",
+    "print(values_array.shape)\n",
+    "\n",
+    "for n in range(max_iter):\n",
+    "    gradient_x = fpx(params[0], params[1])\n",
+    "    gradient_y = fpy(params[0], params[1])\n",
+    "    gradients = np.array([gradient_x, gradient_y]) \n",
+    "    \n",
+    "    params = params - multiplier * gradients\n",
+    "    \n",
+    "#Results\n",
+    "\n",
+    "print('Values in gradient array', gradients)\n",
+    "print('Minimum occurs at x value of: ', params[0])\n",
+    "print('Minimum occurs at y value of: ', params[1])\n",
+    "print('The cost is: ', f(params[0], params[1]))\n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c58268d3",
+   "id": "d13cd671",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5271f1d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebbf0e2b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfa4e85c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0cf2c1fc",
    "metadata": {},
    "outputs": [],
    "source": []
