Implementing a MSE Cost Function

--- a/03 Gradient Descent.ipynb
+++ b/03 Gradient Descent.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 291,
    "id": "b0079fd1",
    "metadata": {},
    "outputs": [],
@@ -22,6 +22,7 @@
     "from sympy import symbols, diff\n",
     "from math import log\n",
     "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_squared_error\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -1292,7 +1293,7 @@
   {
    "cell_type": "code",
    "execution_count": 274,
-   "id": "5321ee3b",
+   "id": "52e448ea",
    "metadata": {},
    "outputs": [
     {
@@ -1321,7 +1322,7 @@
   {
    "cell_type": "code",
    "execution_count": 280,
-   "id": "f9fd2b56",
+   "id": "18314003",
    "metadata": {},
    "outputs": [
     {
@@ -1357,27 +1358,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "17196942",
+   "execution_count": 292,
+   "id": "d099d6d4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Challange\n",
-    "\n"
+    "\n",
+    "def mse(y, y_hat):\n",
+    "    #mse_calc = 1/7*sum((y - y_hat)**2)\n",
+    "    #mse_calc = (1/y.size) * sum((y-y_hat)**2)\n",
+    "    mse_calc = np.average((y - y_hat)**2, axis=0)\n",
+    "    return mse_calc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 293,
+   "id": "baf00de3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Manually calculated MSE is:  [0.94796558]\n",
+      "MSE regression using manual calc is:  0.9479655759794577\n",
+      "MSE regression is:  0.9479655759794577\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Manually calculated MSE is: ', mse(y_5, y_hat))\n",
+    "print('MSE regression using manual calc is: ', mean_squared_error(y_5, y_hat))\n",
+    "print('MSE regression is: ', mean_squared_error(y_5, regr.predict(x_5)))\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ecb002d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "57c44df1",
+   "id": "3a6a682e",
    "metadata": {},
    "outputs": [],
    "source": []
