Created a generator function to read emails from all files in the folder.

--- a/06 Bayes Classifier.ipynb
+++ b/06 Bayes Classifier.ipynb
@@ -10,12 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "id": "9672be65",
    "metadata": {},
    "outputs": [],
    "source": [
-    " "
+    "from os import walk\n",
+    "from os.path import join\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -28,12 +30,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 86,
    "id": "204a5b45",
    "metadata": {},
    "outputs": [],
    "source": [
-    "EXAMPLE_FILE = 'SpamData/01_Processing/practice_email.txt'"
+    "EXAMPLE_FILE = 'SpamData/01_Processing/practice_email.txt'\n",
+    "\n",
+    "SPAM_1_PATH = 'SpamData/01_Processing/spam_assassin_corpus/spam_1'\n",
+    "SPAM_2_PATH = 'SpamData/01_Processing/spam_assassin_corpus/spam_2'\n",
+    "EASY_NONSPAM_1_PATH = 'SpamData/01_Processing/spam_assassin_corpus/easy_ham_1'\n",
+    "EASY_NONSPAM_2_PATH = 'SpamData/01_Processing/spam_assassin_corpus/easy_ham_2'\n",
+    "\n",
+    "SPAM_CAT = 1\n",
+    "HAM_CAT = 0"
    ]
   },
   {
@@ -46,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 87,
    "id": "00c5c3de",
    "metadata": {},
    "outputs": [
@@ -146,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 88,
    "id": "b92acc11",
    "metadata": {},
    "outputs": [
@@ -156,7 +166,7 @@
        "'utf-8'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 89,
    "id": "854592aa",
    "metadata": {},
    "outputs": [
@@ -206,7 +216,7 @@
     }
    ],
    "source": [
-    "stream = open(EXAMPLE_FILE, encoding='latin-1')\n",
+    "stream = open(EXAMPLE_FILE, encoding='utf-8')\n",
     "\n",
     "is_body = False\n",
     "lines = []\n",
@@ -225,25 +235,519 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "400cbbf1",
+   "cell_type": "markdown",
+   "id": "80154201",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Generater Functions"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "id": "2dbbf5e7",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def generate_squares(N):\n",
+    "    for my_number in range(N):\n",
+    "        yield my_number ** 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "4c59d188",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0->1->4->9->16->"
+     ]
+    }
+   ],
+   "source": [
+    "for i in generate_squares(5):\n",
+    "    print(i, end='->')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b7ba57f",
+   "metadata": {},
+   "source": [
+    "## Email body extraction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "52413998",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def email_body_generator(path):\n",
+    "    for root, dirnames, filenames in walk(path):\n",
+    "        for file_name in filenames:\n",
+    "            \n",
+    "            filepath = join(root, file_name)\n",
+    "            \n",
+    "            stream = open(filepath, encoding='latin-1')\n",
+    "\n",
+    "            is_body = False\n",
+    "            lines = []\n",
+    "\n",
+    "            for line in stream:\n",
+    "                if is_body:\n",
+    "                    lines.append(line)\n",
+    "                elif line == '\\n':\n",
+    "                    is_body = True\n",
+    "\n",
+    "            stream.close()\n",
+    "\n",
+    "            email_body = '\\n'.join(lines)\n",
+    "            yield file_name, email_body"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "d636c79d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def df_from_directory(path, classification):\n",
+    "    rows = []\n",
+    "    row_names = []\n",
+    "    \n",
+    "    for file_name, email_body in email_body_generator(path):\n",
+    "        rows.append({'CATEGORY': classification, 'MESSAGE': email_body})\n",
+    "        row_names.append(file_name)\n",
+    "        \n",
+    "    return pd.DataFrame(rows, index=row_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "0653ceaf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CATEGORY</th>\n",
+       "      <th>MESSAGE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>00249.5f45607c1bffe89f60ba1ec9f878039a</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Dear Homeowner,\\n\\n \\n\\nInterest Rates are at ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>00373.ebe8670ac56b04125c25100a36ab0510</th>\n",
+       "      <td>1</td>\n",
+       "      <td>ATTENTION: This is a MUST for ALL Computer Use...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>00214.1367039e50dc6b7adb0f2aa8aba83216</th>\n",
+       "      <td>1</td>\n",
+       "      <td>This is a multi-part message in MIME format.\\n...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>00210.050ffd105bd4e006771ee63cabc59978</th>\n",
+       "      <td>1</td>\n",
+       "      <td>IMPORTANT INFORMATION:\\n\\n\\n\\nThe new domain n...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>00033.9babb58d9298daa2963d4f514193d7d6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>This is the bottom line.  If you can GIVE AWAY...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                        CATEGORY  \\\n",
+       "00249.5f45607c1bffe89f60ba1ec9f878039a         1   \n",
+       "00373.ebe8670ac56b04125c25100a36ab0510         1   \n",
+       "00214.1367039e50dc6b7adb0f2aa8aba83216         1   \n",
+       "00210.050ffd105bd4e006771ee63cabc59978         1   \n",
+       "00033.9babb58d9298daa2963d4f514193d7d6         1   \n",
+       "\n",
+       "                                                                                  MESSAGE  \n",
+       "00249.5f45607c1bffe89f60ba1ec9f878039a  Dear Homeowner,\\n\\n \\n\\nInterest Rates are at ...  \n",
+       "00373.ebe8670ac56b04125c25100a36ab0510  ATTENTION: This is a MUST for ALL Computer Use...  \n",
+       "00214.1367039e50dc6b7adb0f2aa8aba83216  This is a multi-part message in MIME format.\\n...  \n",
+       "00210.050ffd105bd4e006771ee63cabc59978  IMPORTANT INFORMATION:\\n\\n\\n\\nThe new domain n...  \n",
+       "00033.9babb58d9298daa2963d4f514193d7d6  This is the bottom line.  If you can GIVE AWAY...  "
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spam_emails = df_from_directory(SPAM_1_PATH, 1)\n",
+    "spam_emails = spam_emails.append(df_from_directory(SPAM_2_PATH, 1))\n",
+    "spam_emails.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "fe86c100",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1898, 2)"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spam_emails.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "6b43afd1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CATEGORY</th>\n",
+       "      <th>MESSAGE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>00769.25bf9a767b5db0ed93f03c1637281663</th>\n",
+       "      <td>0</td>\n",
+       "      <td>\\n\\nIn a message dated 9/24/2002 11:24:58 AM, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>01074.8590d61ac0aeeadb58dc2f2ba776c406</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Hiya, I always seem to get errors when I do an...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>02479.14365bcad3a60fcf24c5c1813f6291fb</th>\n",
+       "      <td>0</td>\n",
+       "      <td>\\n\\nI don't know how one can expect better and...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>01417.ce7b07a2114218dbac682b599785820d</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Tim Peters wrote:\\n\\n&gt; I've run no experiments...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>00357.d559b71616f64ba1d1c1e61a03644fd4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>At 10:34 AM -0700 on 8/28/02, Jim Whitehead wr...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                        CATEGORY  \\\n",
+       "00769.25bf9a767b5db0ed93f03c1637281663         0   \n",
+       "01074.8590d61ac0aeeadb58dc2f2ba776c406         0   \n",
+       "02479.14365bcad3a60fcf24c5c1813f6291fb         0   \n",
+       "01417.ce7b07a2114218dbac682b599785820d         0   \n",
+       "00357.d559b71616f64ba1d1c1e61a03644fd4         0   \n",
+       "\n",
+       "                                                                                  MESSAGE  \n",
+       "00769.25bf9a767b5db0ed93f03c1637281663  \\n\\nIn a message dated 9/24/2002 11:24:58 AM, ...  \n",
+       "01074.8590d61ac0aeeadb58dc2f2ba776c406  Hiya, I always seem to get errors when I do an...  \n",
+       "02479.14365bcad3a60fcf24c5c1813f6291fb  \\n\\nI don't know how one can expect better and...  \n",
+       "01417.ce7b07a2114218dbac682b599785820d  Tim Peters wrote:\\n\\n> I've run no experiments...  \n",
+       "00357.d559b71616f64ba1d1c1e61a03644fd4  At 10:34 AM -0700 on 8/28/02, Jim Whitehead wr...  "
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ham_emails = df_from_directory(EASY_NONSPAM_1_PATH, HAM_CAT)\n",
+    "ham_emails = ham_emails.append(df_from_directory(EASY_NONSPAM_2_PATH, HAM_CAT))\n",
+    "ham_emails.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "bcfd1668",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3901, 2)"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ham_emails.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "96567b91",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of entire dataframe is  (5799, 2)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CATEGORY</th>\n",
+       "      <th>MESSAGE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>00249.5f45607c1bffe89f60ba1ec9f878039a</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Dear Homeowner,\\n\\n \\n\\nInterest Rates are at ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>00373.ebe8670ac56b04125c25100a36ab0510</th>\n",
+       "      <td>1</td>\n",
+       "      <td>ATTENTION: This is a MUST for ALL Computer Use...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>00214.1367039e50dc6b7adb0f2aa8aba83216</th>\n",
+       "      <td>1</td>\n",
+       "      <td>This is a multi-part message in MIME format.\\n...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>00210.050ffd105bd4e006771ee63cabc59978</th>\n",
+       "      <td>1</td>\n",
+       "      <td>IMPORTANT INFORMATION:\\n\\n\\n\\nThe new domain n...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>00033.9babb58d9298daa2963d4f514193d7d6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>This is the bottom line.  If you can GIVE AWAY...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                        CATEGORY  \\\n",
+       "00249.5f45607c1bffe89f60ba1ec9f878039a         1   \n",
+       "00373.ebe8670ac56b04125c25100a36ab0510         1   \n",
+       "00214.1367039e50dc6b7adb0f2aa8aba83216         1   \n",
+       "00210.050ffd105bd4e006771ee63cabc59978         1   \n",
+       "00033.9babb58d9298daa2963d4f514193d7d6         1   \n",
+       "\n",
+       "                                                                                  MESSAGE  \n",
+       "00249.5f45607c1bffe89f60ba1ec9f878039a  Dear Homeowner,\\n\\n \\n\\nInterest Rates are at ...  \n",
+       "00373.ebe8670ac56b04125c25100a36ab0510  ATTENTION: This is a MUST for ALL Computer Use...  \n",
+       "00214.1367039e50dc6b7adb0f2aa8aba83216  This is a multi-part message in MIME format.\\n...  \n",
+       "00210.050ffd105bd4e006771ee63cabc59978  IMPORTANT INFORMATION:\\n\\n\\n\\nThe new domain n...  \n",
+       "00033.9babb58d9298daa2963d4f514193d7d6  This is the bottom line.  If you can GIVE AWAY...  "
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.concat([spam_emails, ham_emails])\n",
+    "print('Shape of entire dataframe is ', data.shape)\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "13050334",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CATEGORY</th>\n",
+       "      <th>MESSAGE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>00609.dd49926ce94a1ea328cce9b62825bc97</th>\n",
+       "      <td>0</td>\n",
+       "      <td>I'm one of the 30,000 but it's not working ver...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>00957.e0b56b117f3ec5f85e432a9d2a47801f</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Damien Morton quoted:\\n\\n&gt;W3C approves HTML 4 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>01127.841233b48eceb74a825417d8d918abf8</th>\n",
+       "      <td>0</td>\n",
+       "      <td>On Mon, 2002-07-22 at 06:50, che wrote:\\n\\n\\n\\...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>01178.5c977dff972cd6eef64d4173b90307f0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Once upon a time, Manfred wrote :\\n\\n\\n\\n&gt; I w...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>00747.352d424267d36975a7b40b85ffd0885e</th>\n",
+       "      <td>0</td>\n",
+       "      <td>If you run Pick, and then use the \"New FTOC\" b...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                        CATEGORY  \\\n",
+       "00609.dd49926ce94a1ea328cce9b62825bc97         0   \n",
+       "00957.e0b56b117f3ec5f85e432a9d2a47801f         0   \n",
+       "01127.841233b48eceb74a825417d8d918abf8         0   \n",
+       "01178.5c977dff972cd6eef64d4173b90307f0         0   \n",
+       "00747.352d424267d36975a7b40b85ffd0885e         0   \n",
+       "\n",
+       "                                                                                  MESSAGE  \n",
+       "00609.dd49926ce94a1ea328cce9b62825bc97  I'm one of the 30,000 but it's not working ver...  \n",
+       "00957.e0b56b117f3ec5f85e432a9d2a47801f  Damien Morton quoted:\\n\\n>W3C approves HTML 4 ...  \n",
+       "01127.841233b48eceb74a825417d8d918abf8  On Mon, 2002-07-22 at 06:50, che wrote:\\n\\n\\n\\...  \n",
+       "01178.5c977dff972cd6eef64d4173b90307f0  Once upon a time, Manfred wrote :\\n\\n\\n\\n> I w...  \n",
+       "00747.352d424267d36975a7b40b85ffd0885e  If you run Pick, and then use the \"New FTOC\" b...  "
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0fc09aa1",
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c59d188",
+   "id": "c2b195e8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d40355a",
    "metadata": {},
    "outputs": [],
    "source": []
